--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
   <title>Eternal Enemies</title>
 </head>
 <body>
-  
+  <h1>Hello world</h1>
+  <script src="./Player.js"></script>
+  <script src="./Enemies.js"></script>
+  <script src="./Game.js"></script>
+  <script src="./main.js"></script>
 </body>
-<script src="main.js"></script>
+
 </html>
