Finished squares game example.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <title>Eternal Enemies</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <main id="site-main">
+
+  </main>
   <script src="./Player.js"></script>
-  <script src="./Enemies.js"></script>
+  <script src="./Enemy.js"></script>
   <script src="./Game.js"></script>
   <script src="./main.js"></script>
 </body>
